Implementiran navigation dock, ViewModel i Activity

--- a/Software/ZavrsniApp/app/src/main/res/layout/weather_activity.xml
+++ b/Software/ZavrsniApp/app/src/main/res/layout/weather_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -175,4 +176,10 @@
         android:text="@string/fetch_weather"
         android:layout_marginTop="16dp" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_nav_menu" />
 </LinearLayout>
