--- a/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
+++ b/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
@@ -22,6 +22,31 @@
         android:textSize="10sp" />
 
 
+    <LinearLayout
+        android:id="@+id/teamLogosLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp">
+
+        <ImageView
+            android:id="@+id/ivAwayTeamLogo"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:contentDescription="Away Team Logo"
+            android:layout_marginEnd="16dp"/>
+
+        <ImageView
+            android:id="@+id/ivHomeTeamLogo"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:contentDescription="Home Team Logo"
+            android:layout_marginStart="16dp"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tvTeamsLabel"
         android:layout_width="wrap_content"
