--- a/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
+++ b/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
@@ -24,15 +24,15 @@
                 android:id="@+id/tvGameIdLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Game ID:"
-                android:textSize="10sp" />
+                android:text="@string/game_id"
+                android:textSize="11sp" />
 
             <TextView
                 android:id="@+id/tvGameId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"
-                android:textSize="10sp" />
+                android:text="@string/no_data"
+                android:textSize="11sp" />
 
             <LinearLayout
                 android:id="@+id/teamLogosLayout"
@@ -48,14 +48,14 @@
                     android:id="@+id/ivAwayTeamLogo"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:contentDescription="Away Team Logo"
+                    android:contentDescription="@string/away_team_logo"
                     android:layout_marginEnd="16dp"/>
 
                 <ImageView
                     android:id="@+id/ivHomeTeamLogo"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:contentDescription="Home Team Logo"
+                    android:contentDescription="@string/home_team_logo"
                     android:layout_marginStart="16dp"/>
             </LinearLayout>
 
@@ -64,14 +64,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Teams:" />
+                android:text="@string/teams" />
 
             <TextView
                 android:id="@+id/tvTeams"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="-"
+                android:text="@string/no_data"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -80,14 +80,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Scores:" />
+                android:text="@string/scores" />
 
             <TextView
                 android:id="@+id/tvScores"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="-"
+                android:text="@string/no_data"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -95,37 +95,37 @@
                 android:id="@+id/tvTimeRemainingLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time Remaining:" />
+                android:text="@string/time_remaining" />
 
             <TextView
                 android:id="@+id/tvTimeRemaining"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"/>
+                android:text="@string/no_data" />
 
             <TextView
                 android:id="@+id/tvSeasonLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Season:" />
+                android:text="@string/season" />
 
             <TextView
                 android:id="@+id/tvSeason"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"/>
+                android:text="@string/no_data" />
 
             <TextView
                 android:id="@+id/tvStatusLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Status:" />
+                android:text="@string/status" />
 
             <TextView
                 android:id="@+id/tvStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"/>
+                android:text="@string/no_data" />
         </LinearLayout>
     </ScrollView>
 
