--- a/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
+++ b/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sportsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,18 +22,30 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tvAppTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sports_title"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:paddingBottom="16dp" />
+
+            <TextView
                 android:id="@+id/tvGameIdLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/game_id"
-                android:textSize="11sp" />
+                android:textSize="11sp"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/tvGameId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_data"
-                android:textSize="11sp" />
+                android:textSize="11sp"
+                android:layout_gravity="center_horizontal" />
 
             <LinearLayout
                 android:id="@+id/teamLogosLayout"
@@ -95,43 +108,81 @@
                 android:id="@+id/tvTimeRemainingLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/time_remaining" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/time_remaining"
+                android:layout_marginTop="16dp" />
 
             <TextView
                 android:id="@+id/tvTimeRemaining"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_data" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_data"
+                tools:text="05:30" />
+
+            <TextView
+                android:id="@+id/tvQuarterLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/quarter"
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:id="@+id/tvQuarter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_data" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_data"
+                tools:text="4th Quarter" />
 
             <TextView
                 android:id="@+id/tvStatusLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/status" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/status"
+                android:layout_marginTop="16dp" />
 
             <TextView
                 android:id="@+id/tvStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_data" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_data"
+                tools:text="Live" />
+
+            <TextView
+                android:id="@+id/tvLastPlayLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/last_play"
+                android:layout_marginTop="16dp" />
+
+            <TextView
+                android:id="@+id/tvLastPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_data"
+                tools:text="Home team scores a touchdown." />
 
             <TextView
                 android:id="@+id/tvSeasonLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/season" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/season"
+                android:layout_marginTop="16dp" />
 
             <TextView
                 android:id="@+id/tvSeason"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_data" />
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_data"
+                tools:text="2025 Regular Season" />
         </LinearLayout>
     </ScrollView>
 
