--- a/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
+++ b/Software/ZavrsniApp/app/src/main/res/layout/sports_activity.xml
@@ -165,6 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:gravity="center"
                 android:text="@string/no_data"
                 tools:text="Home team scores a touchdown." />
 
